# VideoProcessingFramework

./: CMakeLists.txt
PyNvCodec/: CMakeLists.txt
PyNvCodec/pybind11-2.1.1/tools/: FindPythonLibsNew.cmake
PyNvCodec/src/: PyNvCodec.cpp  __init__.py
